@@ -2,11 +2,6 @@ package com.lukarbonite.autopickup.mixin;
 
 import com.lukarbonite.autopickup.AutoPickup;
 import com.lukarbonite.autopickup.AutoPickupApi;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.ItemEntity;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.item.ItemStack;
-import net.minecraft.server.world.ServerWorld;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
@@ -14,8 +9,13 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
 import java.util.Collections;
 import java.util.List;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.item.ItemEntity;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.ItemStack;
 
-@Mixin(ServerWorld.class)
+@Mixin(ServerLevel.class)
 public abstract class ServerWorldMixin {
 
     /**
@@ -23,10 +23,10 @@ public abstract class ServerWorldMixin {
      * This is used for compatibility with mods like Liteminer that spawn
      * their item drops directly without using Block.dropStacks.
      */
-    @Inject(method = "spawnEntity", at = @At("HEAD"), cancellable = true)
+    @Inject(method = "addFreshEntity", at = @At("HEAD"), cancellable = true)
     private void autopickup_interceptItemSpawns(Entity entity, CallbackInfoReturnable<Boolean> cir) {
         if (entity instanceof ItemEntity itemEntity) {
-            ServerWorld world = (ServerWorld) (Object) this;
+            ServerLevel world = (ServerLevel) (Object) this;
 
             // Skip items with an owner: player hand-drops, entity-produced items (e.g., chicken eggs)
             Entity ownerEntity = itemEntity.getOwner();
@@ -35,8 +35,8 @@ public abstract class ServerWorldMixin {
             }
 
             // Only intercept if we are within an active player drop-context
-            net.minecraft.util.math.Vec3d spawnPos = new net.minecraft.util.math.Vec3d(itemEntity.getX(), itemEntity.getY(), itemEntity.getZ());
-            PlayerEntity owner = com.lukarbonite.autopickup.AutoPickupSessions.findOwnerInDropContext(spawnPos);
+            net.minecraft.world.phys.Vec3 spawnPos = new net.minecraft.world.phys.Vec3(itemEntity.getX(), itemEntity.getY(), itemEntity.getZ());
+            Player owner = com.lukarbonite.autopickup.AutoPickupSessions.findOwnerInDropContext(spawnPos);
 
             // Same-tick tiny-radius fallback if no active drop context matched (for mods that spawn ItemEntity directly)
             if (owner == null) {
@@ -45,9 +45,9 @@ public abstract class ServerWorldMixin {
 
             if (owner != null
                     && !owner.isSpectator()
-                    && world.getGameRules().getValue(AutoPickup.AUTO_PICKUP_GAMERULE_KEY)
-                    && world.getGameRules().getValue(AutoPickup.AUTO_PICKUP_BLOCKS_GAMERULE_KEY)) {
-                ItemStack stackToPickup = itemEntity.getStack();
+                    && world.getGameRules().get(AutoPickup.AUTO_PICKUP_GAMERULE_KEY)
+                    && world.getGameRules().get(AutoPickup.AUTO_PICKUP_BLOCKS_GAMERULE_KEY)) {
+                ItemStack stackToPickup = itemEntity.getItem();
 
                 // Use the API to attempt to pick up the item.
                 List<ItemStack> remainingItems = AutoPickupApi.tryPickup(owner, Collections.singletonList(stackToPickup));
@@ -62,7 +62,7 @@ public abstract class ServerWorldMixin {
 
                 // If some items remain (e.g., inventory full), update the entity's stack.
                 // The original spawnEntity method will then proceed with this smaller stack.
-                itemEntity.setStack(remainingItems.getFirst());
+                itemEntity.setItem(remainingItems.get(0));
             }
         }
     }
